syntax = "proto3";

package chargingsessions;

service ChargingSessionsService {
  // Get charging sessions with pagination and filters
  rpc GetChargingSessions(GetChargingSessionsRequest) returns (GetChargingSessionsResponse);
  
  // Get charging session by ID
  rpc GetChargingSession(GetChargingSessionRequest) returns (ChargingSession);
  
  // Get charging sessions by customer
  rpc GetChargingSessionsByCustomer(GetChargingSessionsByCustomerRequest) returns (GetChargingSessionsResponse);
  
  // Get charging sessions by bike
  rpc GetChargingSessionsByBike(GetChargingSessionsByBikeRequest) returns (GetChargingSessionsResponse);
  
  // Get charging session statistics
  rpc GetChargingSessionStats(GetChargingSessionStatsRequest) returns (ChargingSessionStats);
  
  // Get revenue analytics
  rpc GetRevenueAnalytics(GetRevenueAnalyticsRequest) returns (RevenueAnalytics);
  
  // Get current active session for customer
  rpc GetCurrentActiveSession(GetCurrentActiveSessionRequest) returns (ChargingSession);
}

// Request messages
message GetChargingSessionsRequest {
  string query = 1;
  string status = 2;
  string customer_id = 3;
  string bike_id = 4;
  string start_date = 5;
  string end_date = 6;
  double min_amount = 7;
  double max_amount = 8;
  int32 page = 9;
  int32 limit = 10;
  string sort_by = 11;
  string sort_order = 12;
}

message GetChargingSessionRequest {
  string session_id = 1;
}

message GetChargingSessionsByCustomerRequest {
  string customer_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetChargingSessionsByBikeRequest {
  string bike_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetChargingSessionStatsRequest {
  string period = 1;
  string start_date = 2;
  string end_date = 3;
}

message GetRevenueAnalyticsRequest {
  string period = 1;
  string group_by = 2;
}

message GetCurrentActiveSessionRequest {
  string customer_id = 1;
}

// Response messages
message GetChargingSessionsResponse {
  repeated ChargingSession sessions = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 total_pages = 5;
  bool has_next = 6;
  bool has_prev = 7;
}

message ChargingSession {
  string id = 1;
  string customer_id = 2;
  string bike_id = 3;
  double amount = 4;
  string start_time = 5;
  string end_time = 6;
  string status = 7;
  string created_at = 8;
  string updated_at = 9;
  Customer customer = 10;
  Bike bike = 11;
  int32 duration_minutes = 12;
  double energy_consumed_kwh = 13;
  double cost = 14;
}

message Customer {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
}

message Bike {
  string id = 1;
  string serial_number = 2;
  string brand = 3;
  string model = 4;
  string status = 5;
}

message ChargingSessionStats {
  int32 total_sessions = 1;
  int32 active_sessions = 2;
  int32 completed_sessions = 3;
  int32 cancelled_sessions = 4;
  double total_revenue = 5;
  double average_amount = 6;
  int32 average_duration_minutes = 7;
  string period = 8;
}

message RevenueAnalytics {
  string period = 1;
  string group_by = 2;
  repeated RevenueDataPoint data = 3;
  double total_revenue = 4;
}

message RevenueDataPoint {
  string date = 1;
  double revenue = 2;
}
